# cpp-ml-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  codecov.yaml  docker-compose.override-onnxrt.yaml.example  docker-compose.override-triton.yaml.example  docker-compose.yaml  main.cpp
.github/workflows/: test.yaml
examples/: .gitignore  CMakeLists.txt  image_processing_onnxrt.cpp  image_processing_triton.cpp
include/cpp_server/: base64_decoder.hpp  common.hpp  error.hpp  helper.hpp  image_processor.hpp  inference_engine.hpp  json_utils.h  onnxrt_engine.hpp  onnxrt_helper.hpp  processor.hpp  triton_engine.hpp  triton_helper.hpp
include/cpp_server/base/: inference_engine.hpp  processor.hpp
include/cpp_server/utils/: base64.hpp  base64_decoder.hpp  common.hpp  error.hpp
scripts/: cmake_build.sh  use_clang.sh  use_gcc.sh
src/: error.cpp  image_processor.cpp  onnxrt_engine.cpp  onnxrt_helper.cpp  processor.cpp  triton_engine.cpp  triton_helper.cpp
src/utils/: base64.cpp  base64_decoder.cpp  error.cpp
tests/: CMakeLists.txt  run_tests.sh  test_base64.cpp  test_common.cpp  test_error.cpp  test_orthelper.cpp  test_rapidjson.cpp
